--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
@@ -36,37 +36,34 @@
             </div>
             <div class="product-collateral">
                 <div class="product-variant-list">
-                    @foreach (var product in Model.AssociatedProducts)
-                    {
-                        <div class="product-variant-line update-container" data-url="@Html.Raw(Model.UpdateProductDetailsUrl())">
-                            @Html.Partial("_DownloadSample", product)
-                            @Html.Action("ProductTierPrices", "Catalog", new { productId = product.Id })
-                            @{
-                                var dataDictAttributes = new ViewDataDictionary();
-                                dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", product.Id);
-                                @Html.Partial("_ProductAttributes", product.ProductVariantAttributes, dataDictAttributes)
-                            }
-                            <!--product SKU, manufacturer part number, stock info-->
-                            @Html.Partial("_SKU_Man_Stock", product)
-                            <!--Back in stock subscription-->
-                            @Html.Partial("_BackInStockSubscription", product)
-                            @{
-                                var dataDictGiftCard = new ViewDataDictionary();
-                                dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}", product.Id);
-                                @Html.Partial("_GiftCardInfo", product.GiftCard, dataDictGiftCard)
-                            }
-                            @{
-                                var dataDictPrice = new ViewDataDictionary();
-                                dataDictPrice.TemplateInfo.HtmlFieldPrefix = string.Format("price_{0}", product.Id);
-                                @Html.Partial("_ProductPrice", product.ProductPrice, dataDictPrice)
-                            }
-                            @{
-                                var dataDictAddToCart = new ViewDataDictionary();
-                                dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", product.Id);
-                                @Html.Partial("_AddToCart", product.AddToCart, dataDictAddToCart)
-                            }
-                        </div>
-                    }
+                    <div class="product-variant-line update-container" data-url="@Html.Raw(Model.UpdateProductDetailsUrl())">
+                        @Html.Partial("_DownloadSample", Model)
+                        @Html.Action("ProductTierPrices", "Catalog", new { productId = Model.Id })
+                        @{
+							var dataDictAttributes = new ViewDataDictionary();
+							dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
+							@Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)
+                        }
+                        <!--product SKU, manufacturer part number, stock info-->
+                        @Html.Partial("_SKU_Man_Stock", Model)
+                        <!--Back in stock subscription-->
+                        @Html.Partial("_BackInStockSubscription", Model)
+                        @{
+							var dataDictGiftCard = new ViewDataDictionary();
+							dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}", Model.Id);
+							@Html.Partial("_GiftCardInfo", Model.GiftCard, dataDictGiftCard)
+                        }
+                        @{
+							var dataDictPrice = new ViewDataDictionary();
+							dataDictPrice.TemplateInfo.HtmlFieldPrefix = string.Format("price_{0}", Model.Id);
+							@Html.Partial("_ProductPrice", Model.ProductPrice, dataDictPrice)
+                        }
+                        @{
+							var dataDictAddToCart = new ViewDataDictionary();
+							dataDictAddToCart.TemplateInfo.HtmlFieldPrefix = string.Format("addtocart_{0}", Model.Id);
+							@Html.Partial("_AddToCart", Model.AddToCart, dataDictAddToCart)
+                        }
+                    </div>
                 </div>
                 @Html.Action("ProductSpecifications", "Catalog", new { productId = Model.Id })
                 <div class="clear">
