--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
@@ -1,4 +1,5 @@
 ﻿@model ProductDetailsModel
+@using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Web.Extensions;
 @{
@@ -6,6 +7,57 @@
 
     Html.AddTitleParts(!String.IsNullOrEmpty(Model.MetaTitle) ? Model.MetaTitle : Model.Name);
 }
+
+@helper BundleProducts()
+{
+	foreach (var item in Model.BundledItems.Where(x => x.BundleItem.Visible))
+	{
+		<div class="bundle-item">
+			<div class="bundle-item-name">
+				@if (item.VisibleIndividually)
+				{
+					<a href="@Url.RouteUrl("Product", new { SeName = item.SeName })" title="@T("Products.Details")">@item.Name</a>
+				}
+				else
+				{
+					@item.Name
+				}
+				@if (item.BundleItem.Quantity > 1)
+				{
+					<text>
+						&#215;&nbsp;@item.BundleItem.Quantity
+					</text>
+				}
+			</div>
+			@if (!String.IsNullOrWhiteSpace(item.StockAvailability))
+			{
+				<div class="bundle-item-stock">
+					@T("Products.Availability"):&nbsp;@item.StockAvailability
+				</div>
+			}
+			@if (!String.IsNullOrWhiteSpace(item.ProductPrice.PriceWithDiscount))
+			{
+				<div class="bundle-item-price">
+					@Html.Raw(item.ProductPrice.PriceWithDiscount)
+				</div>
+			}
+			@if (!String.IsNullOrEmpty(item.AttributeInfo))
+			{
+				<div class="bundle-item-attribute-info">
+					@Html.Raw(item.AttributeInfo)
+				</div>
+			}
+
+			@if (item.ProductVariantAttributes.ShouldBeRendered())
+			{
+				<div class="bundle-item-footer">
+					@Html.Partial("_ProductAttributes", item.ProductVariantAttributes, new ViewDataDictionary())
+				</div>
+			}
+		</div>
+	}
+}
+
 <div class="page product-details-page">
     <div class="page-body">
         @Html.Widget("mobile_productdetails_top")
@@ -40,9 +92,30 @@
                         @Html.Partial("_DownloadSample", Model)
                         @Html.Action("ProductTierPrices", "Catalog", new { productId = Model.Id })
                         @{
-							var dataDictAttributes = new ViewDataDictionary();
-							dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
-							@Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)
+							if (Model.ProductType == ProductType.BundledProduct)
+							{
+								<div id="ProductBundleItems" class="product-bundle">
+									@if (Model.RenderBundleTitle())
+									{
+										<div class="bundle-title">
+											<h3>@Model.BundleTitleText</h3>
+										</div>
+									}
+									<div class="bundle-items">										
+										@BundleProducts()
+									</div>
+									@if (Model.BundledItems.Where(x => x.BundleItem.Visible).Count() == 0)
+									{
+										<div class="no-bundled-products">@T("Products.NoBundledItems")</div>
+									}
+								</div>								
+							}
+							else if (Model.ProductVariantAttributes.ShouldBeRendered())
+							{
+								var dataDictAttributes = new ViewDataDictionary();
+								dataDictAttributes.TemplateInfo.HtmlFieldPrefix = string.Format("attributes_{0}", Model.Id);
+								@Html.Partial("_ProductAttributes", Model.ProductVariantAttributes, dataDictAttributes)
+							}
                         }
                         <!--product SKU, manufacturer part number, stock info-->
                         @Html.Partial("_SKU_Man_Stock", Model)
