--- a/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.Mobile.cshtml
@@ -1,12 +1,53 @@
 ﻿@model OrderDetailsModel
 @using SmartStore.Core.Domain.Orders;
+@using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Web.Models.Order;
 @using SmartStore.Services.Localization;
 @{
     Layout = "~/Views/Shared/_Root.cshtml";
-    //title
     Html.AddTitleParts(T("PageTitle.OrderDetails").Text);
 }
+
+@helper BundleProducts(OrderDetailsModel.OrderItemModel parentItem)
+{
+	if (parentItem.BundleItems != null)
+	{
+		foreach (var item in parentItem.BundleItems.OrderBy(x => x.DisplayOrder))
+		{
+			<div class="bundle-item">
+				<div class="bundle-item-name">
+					@if (item.VisibleIndividually)
+					{
+						<a href="@Url.RouteUrl("Product", new { SeName = item.ProductSeName })" title="@T("Products.Details")">@item.ProductName</a>
+					}
+					else
+					{
+						@item.ProductName
+					}
+					@if (item.Quantity > 1 && parentItem.BundlePerItemShoppingCart)
+					{
+						<text>
+							&#215;&nbsp;@item.Quantity
+						</text>
+					}
+				</div>
+				@if (!String.IsNullOrWhiteSpace(item.PriceWithDiscount))
+				{
+					<div class="bundle-item-price">
+						@Html.Raw(item.PriceWithDiscount)
+					</div>
+				}
+				@if (!String.IsNullOrEmpty(item.AttributeInfo))
+				{
+					<div class="bundle-item-attribute-info">
+						@Html.Raw(item.AttributeInfo)
+					</div>
+				}
+			</div>
+		}
+	}
+}
+
 <div class="page order-details">
     <div class="page-title">
         <h1>
@@ -16,7 +57,7 @@
         @Html.Widget("mobile_orderdetails_page_top")
         <div class="order-overview">
             <div>
-                <strong>@T("Order.Order#")@Model.OrderNumber</strong>
+                <strong>@T("Order.Order#"): @Model.OrderNumber</strong>
             </div>
             <div>
                 @T("Order.OrderDate"): @Model.CreatedOn.ToString("D")
@@ -32,8 +73,7 @@
         <div class="order-details-box">
             <div class="billing-info">
                 <div class="title">
-                    <strong>
-                        @T("Order.BillingAddress")</strong>
+                    <strong>@T("Order.BillingAddress"): </strong>
                 </div>
                 <div class="name">@Model.BillingAddress.FirstName @Model.BillingAddress.LastName</div>
                 <div class="email">
@@ -255,6 +295,14 @@
                                     @T("Order.Product(s).SKU"): @item.Sku
                                 </div>
                             }
+							
+							@if (item.ProductType == ProductType.BundledProduct)
+							{
+								<div class="product-bundle-items">
+									@BundleProducts(item)
+								</div>
+							}
+
                             <div class="unitprice">
                                 @T("Order.Product(s).Price"): @item.UnitPrice
                             </div>
