--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.Mobile.cshtml
@@ -1,6 +1,59 @@
 ﻿@model ShoppingCartModel
 @using SmartStore.Core.Domain.Orders;
+@using SmartStore.Core.Domain.Catalog;
 @using SmartStore.Web.Models.ShoppingCart;
+
+@helper BundleProducts(ShoppingCartModel.ShoppingCartItemModel parentItem)
+{
+	if (parentItem.ChildItems != null)
+	{
+		foreach (var item in parentItem.ChildItems.OrderBy(x => x.BundleItem.DisplayOrder))
+		{
+			<div class="bundle-item">
+				<div class="bundle-item-name">
+					@if (item.VisibleIndividually)
+					{
+						<a href="@Url.RouteUrl("Product", new { SeName = item.ProductSeName })" title="@T("Products.Details")">@item.ProductName</a>
+					}
+					else
+					{
+						@item.ProductName
+					}
+					@if (item.Quantity > 1 && item.BundlePerItemShoppingCart)
+					{
+						<text>
+							&#215;&nbsp;@item.Quantity
+						</text>
+					}
+				</div>
+				@if (!String.IsNullOrWhiteSpace(item.BundleItem.PriceWithDiscount))
+				{
+					<div class="bundle-item-price">
+						@Html.Raw(item.BundleItem.PriceWithDiscount)
+					</div>
+				}
+				@if (!String.IsNullOrEmpty(item.AttributeInfo))
+				{
+					<div class="bundle-item-attribute-info">
+						@Html.Raw(item.AttributeInfo)
+					</div>
+				}
+				@if (item.Warnings.Count > 0)
+				{
+					<div class="message-error">
+						<ul>
+							@foreach (var warning in item.Warnings)
+							{
+								<li>@warning</li>
+							}
+						</ul>
+					</div>
+				}
+			</div>
+		}
+	}
+}
+
 <div class="order-summary-content">
     @Html.Widget("mobile_order_summary_content_before")
     @Html.Partial("_OrderReviewData", Model.OrderReviewData)
@@ -63,6 +116,14 @@
                             <div class="unitprice">
                                 @T("ShoppingCart.UnitPrice"): @item.UnitPrice
                             </div>
+							
+							@if (item.ProductType == ProductType.BundledProduct)
+							{
+								<div class="product-bundle-items">
+									@BundleProducts(item)
+								</div>
+							}
+							
                             <div class="quantity">
                                 @T("ShoppingCart.Quantity"):
                                 @if (Model.IsEditable)
