Reorganized some redundant helper methods

--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -41,7 +41,7 @@
                 <li><a id="exportexcel-selected" href="javascript:void(0)">@T("Admin.Common.ExportToExcel.Selected")</a></li>
               </ul>
             </div>
-            <a id="importexcel" href="#importexcel-window" class="btn" role="button" x-data-toggle="modal">
+            <a id="importexcel" href="#importexcel-window" class="btn" role="button">
 				@T("Admin.Common.ImportFromExcel")
 			</a>
             <button type="submit" id="delete-selected" class="btn btn-danger">
