CommonHelper.GenerateRandomInteger was missing

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Picture.cshtml
@@ -1,6 +1,7 @@
 ﻿@model int?
 @using SmartStore.Core;
 @using SmartStore.Web.Framework.UI;
+@using SmartStore.Utilities;
 @{
     
     //other variables
