--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.Telerik.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/RichEditor.Telerik.cshtml
@@ -2,6 +2,7 @@
 @model System.String
 @using Telerik.Web.Mvc.UI
 @using SmartStore.Core;
+@using SmartStore.Utilities;
 @{
     var clientId = (ViewData.TemplateInfo.GetFullHtmlFieldName(string.Empty));
     var random = CommonHelper.GenerateRandomInteger();
