--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
@@ -8,6 +8,7 @@
 @using SmartStore.Services.Customers;
 @using SmartStore.Services.Security;
 @using SmartStore.Web.Extensions;
+@using SmartStore.Utilities;
 
 @{
     var storeUrl = EngineContext.Current.Resolve<IWebHelper>().GetStoreLocation(false);
