--- a/src/Presentation/SmartStore.Web/Administration/Content/variables.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/variables.less
@@ -112,7 +112,7 @@
 // -------------------------
 @inputBackground:               @white;
 @inputBorder:                   #ccc;
-@inputBorderRadius:             @baseBorderRadius;
+@inputBorderRadius:             0; //@baseBorderRadius;
 @inputDisabledBackground:       @grayLighter;
 @formActionsBackground:         #f5f5f5;
 @inputHeight:                   @baseLineHeight + 10px; // base line-height + 8px vertical padding + 2px top/bottom border
