--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/_CreateOrUpdate.cshtml
@@ -156,7 +156,7 @@
                            @Html.SmartLabelFor(model => model.Locales[item].MetaKeywords)
                        </td>
                        <td class="adminData">
-                           @Html.EditorFor(model => model.Locales[item].MetaKeywords)
+                           @Html.TextBoxFor(model => model.Locales[item].MetaKeywords, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.Locales[item].MetaKeywords)
                        </td>
                    </tr>
@@ -165,7 +165,7 @@
                            @Html.SmartLabelFor(model => model.Locales[item].MetaDescription)
                        </td>
                        <td class="adminData">
-                           @Html.TextAreaFor(model => model.Locales[item].MetaDescription)
+                           @Html.TextAreaFor(model => model.Locales[item].MetaDescription, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.Locales[item].MetaDescription)
                        </td>
                    </tr>
@@ -174,7 +174,7 @@
                            @Html.SmartLabelFor(model => model.Locales[item].MetaTitle)
                        </td>
                        <td class="adminData">
-                           @Html.TextAreaFor(model => model.Locales[item].MetaTitle)
+                           @Html.TextAreaFor(model => model.Locales[item].MetaTitle, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.Locales[item].MetaTitle)
                        </td>
                    </tr>
@@ -183,7 +183,7 @@
                            @Html.SmartLabelFor(model => model.Locales[item].SeName)
                        </td>
                        <td class="adminData">
-                           @Html.TextAreaFor(model => model.Locales[item].SeName)
+                           @Html.TextAreaFor(model => model.Locales[item].SeName, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.Locales[item].SeName)
                        </td>
                    </tr>
@@ -200,7 +200,7 @@
                            @Html.SmartLabelFor(model => model.MetaKeywords)
                        </td>
                        <td class="adminData">
-                           @Html.EditorFor(x => x.MetaKeywords)
+                           @Html.TextBoxFor(x => x.MetaKeywords, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.MetaKeywords)
                        </td>
                    </tr>
@@ -209,7 +209,7 @@
                            @Html.SmartLabelFor(model => model.MetaDescription)
                        </td>
                        <td class="adminData">
-                           @Html.TextAreaFor(x => x.MetaDescription)
+                           @Html.TextAreaFor(x => x.MetaDescription, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.MetaDescription)
                        </td>
                    </tr>
@@ -218,7 +218,7 @@
                            @Html.SmartLabelFor(model => model.MetaTitle)
                        </td>
                        <td class="adminData">
-                           @Html.TextAreaFor(x => x.MetaTitle)
+                           @Html.TextAreaFor(x => x.MetaTitle, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.MetaTitle)
                        </td>
                    </tr>
@@ -227,7 +227,7 @@
                            @Html.SmartLabelFor(model => model.SeName)
                        </td>
                        <td class="adminData">
-                           @Html.TextAreaFor(x => x.SeName)
+                           @Html.TextAreaFor(x => x.SeName, new { @class = "input-large" })
                            @Html.ValidationMessageFor(model => model.SeName)
                        </td>
                    </tr>
