--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.SEO.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.SEO.cshtml
@@ -7,7 +7,7 @@
                 @Html.SmartLabelFor(model => model.Locales[item].MetaKeywords)
             </td>
             <td class="adminData">
-                @Html.EditorFor(model => model.Locales[item].MetaKeywords)
+                @Html.TextBoxFor(model => model.Locales[item].MetaKeywords, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.Locales[item].MetaKeywords)
             </td>
         </tr>
@@ -16,7 +16,7 @@
                 @Html.SmartLabelFor(model => model.Locales[item].MetaDescription)
             </td>
             <td class="adminData">
-                @Html.TextAreaFor(model => model.Locales[item].MetaDescription)
+                @Html.TextAreaFor(model => model.Locales[item].MetaDescription, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.Locales[item].MetaDescription)
             </td>
         </tr>
@@ -25,7 +25,7 @@
                 @Html.SmartLabelFor(model => model.Locales[item].MetaTitle)
             </td>
             <td class="adminData">
-                @Html.TextAreaFor(model => model.Locales[item].MetaTitle)
+                @Html.TextAreaFor(model => model.Locales[item].MetaTitle, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.Locales[item].MetaTitle)
             </td>
         </tr>
@@ -34,7 +34,7 @@
                 @Html.SmartLabelFor(model => model.Locales[item].SeName)
             </td>
             <td class="adminData">
-                @Html.TextAreaFor(model => model.Locales[item].SeName)
+                @Html.TextAreaFor(model => model.Locales[item].SeName, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.Locales[item].SeName)
             </td>
         </tr>
@@ -51,7 +51,7 @@
                 @Html.SmartLabelFor(model => model.MetaKeywords)
             </td>
             <td class="adminData">
-                @Html.EditorFor(x => x.MetaKeywords)
+                @Html.TextBoxFor(x => x.MetaKeywords, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.MetaKeywords)
             </td>
         </tr>
@@ -60,7 +60,7 @@
                 @Html.SmartLabelFor(model => model.MetaDescription)
             </td>
             <td class="adminData">
-                @Html.TextAreaFor(x => x.MetaDescription)
+                @Html.TextAreaFor(x => x.MetaDescription, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.MetaDescription)
             </td>
         </tr>
@@ -69,7 +69,7 @@
                 @Html.SmartLabelFor(model => model.MetaTitle)
             </td>
             <td class="adminData">
-                @Html.TextAreaFor(x => x.MetaTitle)
+                @Html.TextAreaFor(x => x.MetaTitle, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.MetaTitle)
             </td>
         </tr>
@@ -78,7 +78,7 @@
                 @Html.SmartLabelFor(model => model.SeName)
             </td>
             <td class="adminData">
-                @Html.TextAreaFor(x => x.SeName)
+                @Html.TextAreaFor(x => x.SeName, new { @class = "input-large" })
                 @Html.ValidationMessageFor(model => model.SeName)
             </td>
         </tr>
