--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Simple.Mobile.cshtml
@@ -62,7 +62,7 @@
     <div class="page-body">
         @Html.Widget("mobile_productdetails_top")
         @*we add enctype = "multipart/form-data" because "File upload" attribute control type requries it*@
-        @using (Html.BeginRouteForm("Product", new { SeName = Model.SeName }, FormMethod.Post, new { enctype = "multipart/form-data" }))
+        @using (Html.BeginRouteForm("Product", new { SeName = Model.SeName }, FormMethod.Post, new { enctype = "multipart/form-data", id = "product-details-form" }))
         {
             <div class="product-essential">
                 <div class="overview">
