Product bundle: Attribute id\name formatting is insufficient. It does not allow products to be part of a form multiple times which is required for bundle items.

--- a/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ProductTemplate.Grouped.Mobile.cshtml
@@ -83,7 +83,7 @@
                             @Html.Partial("_BackInStockSubscription", product)
                             @{
                                 var dataDictGiftCard = new ViewDataDictionary();
-                                dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}", product.Id);
+                                dataDictGiftCard.TemplateInfo.HtmlFieldPrefix = string.Format("giftcard_{0}_0", product.Id);
                                 @Html.Partial("_GiftCardInfo", product.GiftCard, dataDictGiftCard)
                             }
                             @{
