--- a/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/_ProductAttributes.cshtml
@@ -18,7 +18,7 @@
         
     @foreach (var attribute in Model.Where(x => x.ShouldBeRendered()))
     {		
-        string controlId = string.Format("product_attribute_{0}_{1}_{2}", attribute.ProductId, attribute.ProductAttributeId, attribute.Id);
+        string controlId = string.Format("product_attribute_{0}_{1}_{2}_{3}", attribute.ProductId, attribute.BundleItemId, attribute.ProductAttributeId, attribute.Id);
         string textPrompt = !string.IsNullOrEmpty(attribute.TextPrompt) ? attribute.TextPrompt : attribute.Name;
 		string disabled = (attribute.IsDisabled ? " disabled=\"disabled\"" : null);
 		
