--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -617,6 +617,15 @@
 				@Html.ValidationMessageFor(model => model.BundleItemShowBasePrice)
 			</td>
 		</tr>
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowVariantCombinationPriceAdjustment)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowVariantCombinationPriceAdjustment)
+                @Html.ValidationMessageFor(model => model.ShowVariantCombinationPriceAdjustment)
+            </td>
+        </tr>
     </table>
 }    
 @helper TabProductSearchSettings()
