#277 Show BasePrice (PAnGv) in cart also

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
@@ -234,5 +234,15 @@
             </td>
         </tr>
 
+        <tr>
+            <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ShowBasePrice)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ShowBasePrice)
+                @Html.ValidationMessageFor(model => model.ShowBasePrice)
+            </td>
+        </tr>
+
     </table>
 }
