--- a/src/Presentation/SmartStore.Web/Content/theme.common.less
+++ b/src/Presentation/SmartStore.Web/Content/theme.common.less
@@ -832,4 +832,6 @@ fieldset > legend {
 .addon-buttons {
     clear: both;
 }
-
+.order-summary-content .base-price.muted {
+    font-size: .85em;
+}
