--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -34,6 +34,13 @@
 				</div>
 			}
 
+            @if (Model.DisplayBasePrice && !String.IsNullOrEmpty(item.BasePrice))
+            {
+                <div class="base-price muted ">
+                    @item.BasePrice
+                </div>
+            }
+
 			<!-- delivery time -->
 			@if (Model.DisplayDeliveryTime)
 			{
@@ -160,6 +167,12 @@
 									@Html.Raw(item.ShortDesc)
 								</div>
 							}
+                            @if (Model.DisplayBasePrice && !String.IsNullOrEmpty(item.BasePrice))
+                            {
+                                <div class="base-price muted ">
+                                    @item.BasePrice
+                                </div>
+                            }
 							@if (!String.IsNullOrEmpty(item.AttributeInfo))
 							{
 								<div class="bundle-item-attribute-info muted">
